--- a/index.html
+++ b/index.html
@@ -1,19 +1,65 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Ofertas Imperdíveis</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<style>
-  body { background: #f8f9fa; }
-  .card { margin-bottom: 20px; }
-  .card img { max-height: 300px; object-fit: contain; }
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>PromoFinderML - Promoções no Mercado Livre</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background: #f8f9fa;
+      font-family: 'Montserrat', sans-serif;
+    }
+    .hero {
+      background: linear-gradient(to right, #ffe600, #fff);
+      padding: 60px 20px;
+      text-align: center;
+    }
+    .hero h1 {
+      color: #000;
+      font-weight: 700;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      color: #333;
+    }
+    .card {
+      margin-bottom: 20px;
+    }
+    .card img {
+      max-height: 300px;
+      object-fit: contain;
+    }
+    footer {
+      background: #ffe600;
+      padding: 20px 0;
+      text-align: center;
+      margin-top: 40px;
+    }
+    footer p {
+      margin: 0;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-<div class="container py-4">
+
+  <header class="hero">
+    <h1>PromoFinderML</h1>
+    <p>Descubra promoções incríveis no Mercado Livre com tecnologia Python</p>
+  </header>
+
+  <div class="container py-4">
+    <h2 class="mb-4 text-center text-primary">Ofertas em Destaque</h2>
+    <div class="row">
+      <!-- PRODUTOS INSERIDOS -->
+      <!-- Código dos cards de produto vai aqui -->
+      <!-- Início cards -->
+      <!-- Copiado diretamente do código original enviado -->
+      <!-- INICIO PRODUTOS -->
+      <!-- Colei aqui os cards para manter a funcionalidade completa -->
+      <div class="container py-4">
   <h1 class="mb-4 text-center">Ofertas Imperdíveis - Mercado Livre</h1>
   <div class="row">
     
@@ -129,5 +175,13 @@
 
   </div>
 </div>
+      <!-- FIM PRODUTOS -->
+    </div>
+  </div>
+
+  <footer>
+    <p>Feito por Victor com Python &hearts; | Dados direto do mercado livre por WebScrapping</p>
+  </footer>
+
 </body>
 </html>
