--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="card-body">
       <h5 class="card-title">Kit 2câmera Ip Icsee Prova D'água Infravermelho Externa Wifi - Bahrein</h5>
       <p class="card-text">Preço: R$ 203,00</p>
-      <a href="https://www.mercadolivre.com.br/kit-2cmera-ip-icsee-prova-dagua-infravermelho-externa-wifi-bahrein/p/MLB46836439?pdp_filters=deal%3AMLB1274143-1&searchVariation=MLB46836439#polycard_client=search-nordic&searchVariation=MLB46836439&wid=MLB5309063322&position=2&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1pTpoyG" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
@@ -75,7 +75,7 @@
     <div class="card-body">
       <h5 class="card-title">Lava Roupas Líquido OMO Lavanderia Profissional Lavagem 7 L</h5>
       <p class="card-text">Preço: R$ 74,65</p>
-      <a href="https://www.mercadolivre.com.br/lava-roupas-liquido-omo-lavanderia-profissional-lavagem-7-l/p/MLB17001072?pdp_filters=deal%3AMLB1274143-1#polycard_client=search-nordic&searchVariation=MLB17001072&wid=MLB3369802499&position=3&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1bLnSxE" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
@@ -86,7 +86,7 @@
     <div class="card-body">
       <h5 class="card-title">Jogo Talheres Faqueiro Búzios Aço Inox 24 Peças Tramontina</h5>
       <p class="card-text">Preço: R$ 65,56</p>
-      <a href="https://www.mercadolivre.com.br/jogo-talheres-faqueiro-buzios-aco-inox-24-pecas-tramontina/p/MLB35092029?pdp_filters=deal%3AMLB1274143-1&searchVariation=MLB35092029#polycard_client=search-nordic&searchVariation=MLB35092029&wid=MLB3998221421&position=4&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/2bdkzp1" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
@@ -97,73 +97,73 @@
     <div class="card-body">
       <h5 class="card-title">Câmera De Segurança Fergusom Lâmpada Ip Wifi Com Visão Noturna Interna Externa App Yoosee Espiã 360º Cor Branco</h5>
       <p class="card-text">Preço: R$ 58,42</p>
-      <a href="https://www.mercadolivre.com.br/cmera-de-seguranca-fergusom-lmpada-ip-wifi-com-viso-noturna-interna-externa-app-yoosee-espi-360-cor-branco/p/MLB28574077?pdp_filters=deal%3AMLB1274143-1&searchVariation=MLB28574077#polycard_client=search-nordic&searchVariation=MLB28574077&wid=MLB4041712857&position=5&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/2UFGe78" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="Conjunto 10 Potes 640ml Vidro Hermético 4 Travas Marmita Aura Do Brasil">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_983323-MLA82083675539_012025-O.webp" class="card-img-top" alt="Conjunto 10 Potes 640ml Vidro Hermético 4 Travas Marmita Aura Do Brasil">
     <div class="card-body">
       <h5 class="card-title">Conjunto 10 Potes 640ml Vidro Hermético 4 Travas Marmita Aura Do Brasil</h5>
       <p class="card-text">Preço: R$ 154,00</p>
-      <a href="https://www.mercadolivre.com.br/conjunto-10-potes-640ml-vidro-hermetico-4-travas-marmita-aura-do-brasil/p/MLB42514118?pdp_filters=deal%3AMLB1274143-1&searchVariation=MLB42514118#polycard_client=search-nordic&searchVariation=MLB42514118&wid=MLB4045960407&position=6&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1RZMsRC" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="2 Coberta Manta Soft Casal Microfibra Veludo 2,00x1,80 Mts">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_834747-MLB76102846733_042024-O-2-coberta-manta-soft-casal-microfibra-veludo-200x180-mts.webp" class="card-img-top" alt="2 Coberta Manta Soft Casal Microfibra Veludo 2,00x1,80 Mts">
     <div class="card-body">
       <h5 class="card-title">2 Coberta Manta Soft Casal Microfibra Veludo 2,00x1,80 Mts</h5>
       <p class="card-text">Preço: R$ 59,90</p>
-      <a href="https://produto.mercadolivre.com.br/MLB-3227161176-2-coberta-manta-soft-casal-microfibra-veludo-200x180-mts-_JM?searchVariation=176777570343&pdp_filters=deal%3AMLB1274143-1#polycard_client=search-nordic&searchVariation=176777570343&position=40&search_layout=grid&type=item&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/26shj9J" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="Coberdrom Casal Queen Pele De Coelho Dupla Face Macio Luxo">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_963529-MLB83019092586_032025-O-coberdrom-casal-queen-pele-de-coelho-dupla-face-macio-luxo.webp" class="card-img-top" alt="Coberdrom Casal Queen Pele De Coelho Dupla Face Macio Luxo">
     <div class="card-body">
       <h5 class="card-title">Coberdrom Casal Queen Pele De Coelho Dupla Face Macio Luxo</h5>
       <p class="card-text">Preço: R$ 206,90</p>
-      <a href="https://click1.mercadolivre.com.br/mclics/clicks/external/MLB/count?a=gPJHDMHSB8SXzM56kuunbBkT1vBLldpg1dSiqCvTcfJxBcAtxseesLCQzZjVZO4fQcQ%2BKv13O5OHQPZx0ReV4UZ1X1voRj5kEbGDqrgXS6hCV%2FjPKpohQ3%2FzQOEMI1iLKtDh15wGKqpaoWNvmO%2BFNnOMo6qzVbIEIkvtvBQlOxy7x3%2Bylr%2FnGqv4qWRP8jlfUclhi1lQzvK5gRHve5aBmLBdpw2GDGlYiKCMy7%2BqMZmczFRkbMtkfK5nzyYv4FVRL4PmDDxbouzb1oX22f4suePNOreS7bH77cZBCTBw22HTN3Kh0yfb%2FLFUaADkIScpujKAEBIhMHknRG%2B0l8KhAGuPVhnIMlqS3IJS76Ld%2FFkeUCi6IwlpkIIAhzl4DNX6a2rFGrzvlw%2FH9Urj3JqvWccUp08UcVZYBZDw2jP1jSOa9cM4srDGBfPBFJU2iVCIqtNYiy49BF1MBUE48wYgP76umk%2BSoqxnQBEUEDZxu2K7lCVL9AlMYvuWCHoJRslFtPYMCxhKMZ%2Fa7j0sR9UjyOalXXnUxkKPYNp%2BqLfH3SmOjCMPR5KKXLWkk%2BB6ZXTPs1I7yCKgQVcrTOeU%2FpC2n%2BJk2RbRTj%2B%2FVyXYBLrRzBDqtWt0l5ReilU7MnjXXIf83kEe8iQYrNpxKSsGPyVvt%2B7AAGfvQR6KTbh1VZjSxPrgp%2FDkeHowlGgNkkqJRd3dW4VRJRHw0Dw6EiwtpOcKztyl4rAl5lynyINqoQWjUt7uQXbrFMTwbq2sSTTwoaYG%2BMjHrLiczU%2BXeB%2FgOupM9DnsRi9U%2FLRA37aNrwpEypG5cq5Q7mFT0%2BRJ0MEO7S6RvkGjJrngSXNTVrwbo3ptoVnFom3Hxe4TVD%2FTDN89ceLLJVOVPR54fyEx6N09vQ%2F%2B2gIIi%2FQGWfQLleVYvuFNPwSZ4TiEgLZRF0MSB7yE2%2F0%2BVnuzV4USKXaHDRDZbmQNEBc8uw%3D%3D&searchVariation=187320927417&pdp_filters=deal%3AMLB1274143-1#polycard_client=search-nordic&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1RfobaF" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_651390-MLB82519798497_022025-O-balanca-de-cozinha-digital-inox-ate-10kg-alimentos-portatil.webp" class="card-img-top" alt="Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil">
     <div class="card-body">
       <h5 class="card-title">Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil</h5>
       <p class="card-text">Preço: R$ 37,97</p>
-      <a href="https://click1.mercadolivre.com.br/mclics/clicks/external/MLB/count?a=cYVVH51tYG%2BWVRP6hGm4OPitJp%2FDAeZzO9NgcZb0IUQczx7zgpfPLzCXwZP624jc4den5P6fpJS3yuZRSHT704iksG9oub0%2Fn2v4KNa0UeZOOvWGaDYjZUUBXMtnHPZ4jDhKrDMehMNKSpBCs5uBezmfv7V6VzXfzBgSkCOWvsxrZK%2FzEcjtTPt6gfQLyfoUuOyM5dF981G4zyhqEOfVTNBm5k%2BYuGpVKo%2FJFq9roX43%2BKEoldt8pt6XVseQrh9EmAr8naYfgLXxhuUnHH7T487eS8Wwfvl2hFSZynRvMSRP2si5yackEyK9zQzxWjkVfn%2FHRN79VpXlZQHs0XORIF6vtHM3QOrvYEyp2X35F39R%2B5IelZtIxh2zsjvNNmydM7cHR9IicHVcmMYeB29rrFxLeWtyKOY7LlVKmfWm8%2BSWZhHa1eQL7n%2BO3ga2RssmrTKwJ3afpwafBQ37KJecLoD%2FpFcZSuZNCJp8nopsBMh%2B7zMIphiJHjJkZhwzmyGTQDC8BucGeN9dkghWDINX8kkBT0So%2FhiQbbE306cALVWQoz%2FSBkqC2PKg2AODRZF6dmoJYCPDXGmKBVoiXpvty14gCkDKisywv0B5%2F3QPtbOaOEfag3lOJYemO38CP12Fs1l9xRuJGg4ZDZ2Rs4jmHC1802Uf5JtxtnjdcEEqJ0rZq%2BLt43ipDdR%2FuI8J4ouOO6Jv%2BMnBmaMdSwGLYkQCq%2FSNOetNTnYbXtnFrLQ%2BL65P5YlcMolx6ibd0e8ysqP1MeK1Un8VDzecnPmjLR2i4DJoGlrdmnW7Zukkv2p8N3u09U0tPz%2BMjKv5NQ8G%2FhP1EwQHRJsDUWZ2Q%2Bv7qN3q3ArXMn%2BvJvjr7Wh3lsPeSNUI0OI2dFUU6fO1QNLtusFcr5cMvKdZBfCzFU1%2BinhKUTr5zDUfoePn%2BvZ35THPSKp111wX7wWgBMj1M415E5dIyhFeN%2Fw%3D&searchVariation=186962492967&pdp_filters=deal%3AMLB1274143-1#polycard_client=search-nordic&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1Q8Hnh7" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="Jogo De Panelas Antiaderente 10 Peças Prime Alumínio Teflon">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_759359-MLB82647550024_032025-O-jogo-de-panelas-antiaderente-10-pecas-prime-aluminio-teflon.webp" class="card-img-top" alt="Jogo De Panelas Antiaderente 10 Peças Prime Alumínio Teflon">
     <div class="card-body">
       <h5 class="card-title">Jogo De Panelas Antiaderente 10 Peças Prime Alumínio Teflon</h5>
       <p class="card-text">Preço: R$ 220,91</p>
-      <a href="https://click1.mercadolivre.com.br/mclics/clicks/external/MLB/count?a=oaqJBNMsTR5xMFrLL4L1J9KRZ1QECxFHC2%2BMMDiehEsEvmbqc6W2j%2BjPwV6h1VfctJr8hGVtkedo0tAC%2F5wek3En8QYqZFmGf7RSjHIYpT6GLfo1%2BZrNyeVE1zFyaYrZqtamBNqr3fHhX07nvOzGOaqYSekk4VMBm28z4WQKFK8hX3xdBJwFzOYqo8PZS8JeWuLrIyxsaV3D%2Favw2l6y5k8Qg6tpGdb%2FG1WPCB9UQI7G%2BsHB8bq7aOWt9b2cm4R0t8LhXvj%2FiZpNbqlnnPjFFfj9sqzEcS4GSiuV5V5giqACmsAt6fLhor6pB9yGlzYWe9%2B7PYSmYFr%2FI1wQnWjYRY9F69p9I7RH9cfaIgPK0SpLwnqWn7lLHavDtrBqI24gP8VYFCCflfRjjfhcpjhEpKadxIJpjgsT3YvJBlBkbTRDRhKgL0PLUuibZEV4aJAGTnvYDK2sFfLGWXBPvs42XhrLaYTS8y6tIjzkSILx8JNOs5u0UJUADTzbt2iRshtGN6tho9iSzZjwpbEhKVU9cVUS7Xlf2sbWkxggBdcFgjwuOY8oLzIcNKJOWHBvtA81evmga%2BXDV8UBq9YCtshfE77fDLBJDFIzyUtdgbDNfVoKF8LQ1NV%2FDBqBYebErCXIYHT%2B2BPazqcBcu%2BmDQx1HBF2UZEj0O1IPMME%2BSAnzTpvBU1rYGWBJ5ny4sWFcvmKHO5%2FqixIygi51nWCvbcbuANCanwqE8N8%2FqV35A0HX6eg0Ag10Hx1GCOWDmAvYUiPkox2L37VbHxN7Uq1%2FJSv6lb6ZSpADVmJeErhmPIUkp05wEgL0D9mATn2fOY2%2BUyH0TqmMdNXPs7SrRYqFbrRMJvfAMo%2BBFVcVhfpu0D%2B6puOWzJscKwB1Nb0g%2FVNhO743%2BsOyzaE%2BSXXYBMivexI79EwrkI6g2MWjkUVVgoDdtcjT%2Bu0qWUfbdBH8wD4pLf8uoITSg%3D%3D&searchVariation=187145369893&pdp_filters=deal%3AMLB1274143-1#polycard_client=search-nordic&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/1yPCFBX" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" class="card-img-top" alt="Conj de Panelas 8 Peças Ceramic Life Smart Plus Vanilla - Brinox">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_730553-MLU77406946979_072024-O.webp" class="card-img-top" alt="Conj de Panelas 8 Peças Ceramic Life Smart Plus Vanilla - Brinox">
     <div class="card-body">
       <h5 class="card-title">Conj de Panelas 8 Peças Ceramic Life Smart Plus Vanilla - Brinox</h5>
       <p class="card-text">Preço: R$ 739,99</p>
-      <a href="https://www.mercadolivre.com.br/conj-de-panelas-8-pecas-ceramic-life-smart-plus-vanilla-brinox/p/MLB32717965?pdp_filters=deal%3AMLB1274143-1&searchVariation=MLB32717965#polycard_client=search-nordic&searchVariation=MLB32717965&wid=MLB4533000520&position=10&search_layout=grid&type=product&tracking_id=f642667b-93df-4a4a-b0c4-c15ea0317934&sid=search" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <a href="https://mercadolivre.com/sec/2hXMJ5u" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
