--- a/index.html
+++ b/index.html
@@ -60,110 +60,110 @@
     
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_676253-MLA82631552630_032025-E.webp" class="card-img-top" alt="Kit 2câmera Ip Icsee Prova D'água Infravermelho Externa Wifi - Bahrein">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_669773-MLA86033518535_062025-E.webp" class="card-img-top" alt="Aparador De Pelos Super Groom 10 Preto Azul Bg-03 Mondial">
     <div class="card-body">
-      <h5 class="card-title">Kit 2câmera Ip Icsee Prova D'água Infravermelho Externa Wifi - Bahrein</h5>
-      <p class="card-text">Preço: R$ 203,00</p>
-      <a href="https://mercadolivre.com/sec/1pTpoyG" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Aparador De Pelos Super Groom 10 Preto Azul Bg-03 Mondial</h5>
+      <p class="card-text">Preço: R$ 109,66</p>
+      <a href="https://mercadolivre.com/sec/1fHkCfu" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_688279-MLA84539006274_052025-E.webp" class="card-img-top" alt="Lava Roupas Líquido OMO Lavanderia Profissional Lavagem 7 L">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_832151-MLU69955905478_062023-E.webp" class="card-img-top" alt="Creme Hidratante Textura Cremosa 454g Cerave">
     <div class="card-body">
-      <h5 class="card-title">Lava Roupas Líquido OMO Lavanderia Profissional Lavagem 7 L</h5>
-      <p class="card-text">Preço: R$ 74,65</p>
-      <a href="https://mercadolivre.com/sec/1bLnSxE" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Creme Hidratante Textura Cremosa 454g Cerave</h5>
+      <p class="card-text">Preço: R$ 82,00</p>
+      <a href="https://mercadolivre.com/sec/2vAcfwA" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_635223-MLA84841207829_052025-E.webp" class="card-img-top" alt="Jogo Talheres Faqueiro Búzios Aço Inox 24 Peças Tramontina">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_693298-MLA82520087107_022025-E.webp" class="card-img-top" alt="Perfume Attracione Men by attracione 25 ml">
     <div class="card-body">
-      <h5 class="card-title">Jogo Talheres Faqueiro Búzios Aço Inox 24 Peças Tramontina</h5>
-      <p class="card-text">Preço: R$ 65,56</p>
-      <a href="https://mercadolivre.com/sec/2bdkzp1" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Perfume Attracione Men by attracione 25 ml</h5>
+      <p class="card-text">Preço: R$ 109,99</p>
+      <a href="https://mercadolivre.com/sec/2VxkcTu" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_991605-MLA79464625130_102024-E.webp" class="card-img-top" alt="Câmera De Segurança Fergusom Lâmpada Ip Wifi Com Visão Noturna Interna Externa App Yoosee Espiã 360º Cor Branco">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_620844-MLA70823023941_082023-E.webp" class="card-img-top" alt="Boticário Floratta Blue Deo Colônia Feminino 75ml">
     <div class="card-body">
-      <h5 class="card-title">Câmera De Segurança Fergusom Lâmpada Ip Wifi Com Visão Noturna Interna Externa App Yoosee Espiã 360º Cor Branco</h5>
-      <p class="card-text">Preço: R$ 58,42</p>
-      <a href="https://mercadolivre.com/sec/2UFGe78" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Boticário Floratta Blue Deo Colônia Feminino 75ml</h5>
+      <p class="card-text">Preço: R$ 110,00</p>
+      <a href="https://mercadolivre.com/sec/2NNAZy2" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_983323-MLA82083675539_012025-O.webp" class="card-img-top" alt="Conjunto 10 Potes 640ml Vidro Hermético 4 Travas Marmita Aura Do Brasil">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_702638-MLA74652687496_022024-E.webp" class="card-img-top" alt="Paco Rabanne One million 1 Million Tradicional EDT 200ml para masculino">
     <div class="card-body">
-      <h5 class="card-title">Conjunto 10 Potes 640ml Vidro Hermético 4 Travas Marmita Aura Do Brasil</h5>
-      <p class="card-text">Preço: R$ 154,00</p>
-      <a href="https://mercadolivre.com/sec/1RZMsRC" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Paco Rabanne One million 1 Million Tradicional EDT 200ml para masculino</h5>
+      <p class="card-text">Preço: R$ 569,90</p>
+      <a href="https://mercadolivre.com/sec/2XVXxWy" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_834747-MLB76102846733_042024-O-2-coberta-manta-soft-casal-microfibra-veludo-200x180-mts.webp" class="card-img-top" alt="2 Coberta Manta Soft Casal Microfibra Veludo 2,00x1,80 Mts">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_647603-MLA84850490689_052025-E.webp" class="card-img-top" alt="Escova Secadora de Cabelos Britânia Bec07r Soft 4 Em 1 1300w Cabo Giratório Rosa">
     <div class="card-body">
-      <h5 class="card-title">2 Coberta Manta Soft Casal Microfibra Veludo 2,00x1,80 Mts</h5>
-      <p class="card-text">Preço: R$ 59,90</p>
-      <a href="https://mercadolivre.com/sec/26shj9J" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Escova Secadora de Cabelos Britânia Bec07r Soft 4 Em 1 1300w Cabo Giratório Rosa</h5>
+      <p class="card-text">Preço: R$ 121,48</p>
+      <a href="https://mercadolivre.com/sec/2dRqozF" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_963529-MLB83019092586_032025-O-coberdrom-casal-queen-pele-de-coelho-dupla-face-macio-luxo.webp" class="card-img-top" alt="Coberdrom Casal Queen Pele De Coelho Dupla Face Macio Luxo">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_994628-MLU78867835193_092024-O.webp" class="card-img-top" alt="Loção hidratante Com Ácido Hialurônico 473ml Cerave">
     <div class="card-body">
-      <h5 class="card-title">Coberdrom Casal Queen Pele De Coelho Dupla Face Macio Luxo</h5>
-      <p class="card-text">Preço: R$ 206,90</p>
-      <a href="https://mercadolivre.com/sec/1RfobaF" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Loção hidratante Com Ácido Hialurônico 473ml Cerave</h5>
+      <p class="card-text">Preço: R$ 89,90</p>
+      <a href="https://mercadolivre.com/sec/2U7hLso" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_651390-MLB82519798497_022025-O-balanca-de-cozinha-digital-inox-ate-10kg-alimentos-portatil.webp" class="card-img-top" alt="Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_638067-MLU73208529553_122023-O.webp" class="card-img-top" alt="Natura Homem Verum Deo Parfum 100 ml">
     <div class="card-body">
-      <h5 class="card-title">Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil</h5>
-      <p class="card-text">Preço: R$ 37,97</p>
-      <a href="https://mercadolivre.com/sec/1Q8Hnh7" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Natura Homem Verum Deo Parfum 100 ml</h5>
+      <p class="card-text">Preço: R$ 115,94</p>
+      <a href="https://mercadolivre.com/sec/1TPCvet" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_759359-MLB82647550024_032025-O-jogo-de-panelas-antiaderente-10-pecas-prime-aluminio-teflon.webp" class="card-img-top" alt="Jogo De Panelas Antiaderente 10 Peças Prime Alumínio Teflon">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_729128-MLA84535364148_052025-O.webp" class="card-img-top" alt="Night Caviar Paris Elysees Edt - Perfume Masculino 100ml">
     <div class="card-body">
-      <h5 class="card-title">Jogo De Panelas Antiaderente 10 Peças Prime Alumínio Teflon</h5>
-      <p class="card-text">Preço: R$ 220,91</p>
-      <a href="https://mercadolivre.com/sec/1yPCFBX" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Night Caviar Paris Elysees Edt - Perfume Masculino 100ml</h5>
+      <p class="card-text">Preço: R$ 78,90</p>
+      <a href="https://mercadolivre.com/sec/1XiV8CK" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_730553-MLU77406946979_072024-O.webp" class="card-img-top" alt="Conj de Panelas 8 Peças Ceramic Life Smart Plus Vanilla - Brinox">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_673644-CBT83457912055_042025-O-3-em-1-basto-de-blush-heart-cremoso-heci-beauty-7g.webp" class="card-img-top" alt="3 Em 1 Bastão De Blush Heart Cremoso Heci Beauty 7g">
     <div class="card-body">
-      <h5 class="card-title">Conj de Panelas 8 Peças Ceramic Life Smart Plus Vanilla - Brinox</h5>
-      <p class="card-text">Preço: R$ 739,99</p>
-      <a href="https://mercadolivre.com/sec/2hXMJ5u" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">3 Em 1 Bastão De Blush Heart Cremoso Heci Beauty 7g</h5>
+      <p class="card-text">Preço: R$ 8,79</p>
+      <a href="https://mercadolivre.com/sec/1LWoUu2" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
