--- a/index.html
+++ b/index.html
@@ -60,110 +60,110 @@
     
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_669773-MLA86033518535_062025-E.webp" class="card-img-top" alt="Aparador De Pelos Super Groom 10 Preto Azul Bg-03 Mondial">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_777338-MLB85058385488_052025-O-balanca-de-cozinha-digital-inox-ate-10kg-alimentos-portatil.webp" class="card-img-top" alt="Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil">
     <div class="card-body">
-      <h5 class="card-title">Aparador De Pelos Super Groom 10 Preto Azul Bg-03 Mondial</h5>
-      <p class="card-text">Preço: R$ 109,66</p>
-      <a href="https://mercadolivre.com/sec/1fHkCfu" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Balança De Cozinha Digital Inox Até 10kg Alimentos Portátil</h5>
+      <p class="card-text">Preço: R$ 39,68</p>
+      <a href="https://mercadolivre.com/sec/19Ag5fj" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_832151-MLU69955905478_062023-E.webp" class="card-img-top" alt="Creme Hidratante Textura Cremosa 454g Cerave">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_934520-MLB72391338436_102023-AB-boticario-men-only-deo-colnia-masculino-100ml.webp" class="card-img-top" alt="Boticário Men Only Deo Colônia Masculino 100ml">
     <div class="card-body">
-      <h5 class="card-title">Creme Hidratante Textura Cremosa 454g Cerave</h5>
-      <p class="card-text">Preço: R$ 82,00</p>
-      <a href="https://mercadolivre.com/sec/2vAcfwA" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Boticário Men Only Deo Colônia Masculino 100ml</h5>
+      <p class="card-text">Preço: R$ 77,45</p>
+      <a href="https://mercadolivre.com/sec/2riKzqZ" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_693298-MLA82520087107_022025-E.webp" class="card-img-top" alt="Perfume Attracione Men by attracione 25 ml">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_737936-MLA73022595039_112023-AB.webp" class="card-img-top" alt="Men Only Des. Colônia, 100ml Volume Da Unidade 100 Ml">
     <div class="card-body">
-      <h5 class="card-title">Perfume Attracione Men by attracione 25 ml</h5>
-      <p class="card-text">Preço: R$ 109,99</p>
-      <a href="https://mercadolivre.com/sec/2VxkcTu" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Men Only Des. Colônia, 100ml Volume Da Unidade 100 Ml</h5>
+      <p class="card-text">Preço: R$ 77,45</p>
+      <a href="https://mercadolivre.com/sec/1nhQtoG" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_620844-MLA70823023941_082023-E.webp" class="card-img-top" alt="Boticário Floratta Blue Deo Colônia Feminino 75ml">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_759928-MLU75592406885_042024-AB.webp" class="card-img-top" alt="Escova Secadora Britânia Bes08p 1300w">
     <div class="card-body">
-      <h5 class="card-title">Boticário Floratta Blue Deo Colônia Feminino 75ml</h5>
-      <p class="card-text">Preço: R$ 110,00</p>
-      <a href="https://mercadolivre.com/sec/2NNAZy2" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Escova Secadora Britânia Bes08p 1300w</h5>
+      <p class="card-text">Preço: R$ 98,89</p>
+      <a href="https://mercadolivre.com/sec/2vgGZ9F" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_702638-MLA74652687496_022024-E.webp" class="card-img-top" alt="Paco Rabanne One million 1 Million Tradicional EDT 200ml para masculino">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_658940-MLA84626184380_052025-AB.webp" class="card-img-top" alt="Maquina Maquininha De Cortar Cabelo Barbeador Eletrico Aparador De Pelos Acabamento Dragão Buda Profissional Kamufla">
     <div class="card-body">
-      <h5 class="card-title">Paco Rabanne One million 1 Million Tradicional EDT 200ml para masculino</h5>
-      <p class="card-text">Preço: R$ 569,90</p>
-      <a href="https://mercadolivre.com/sec/2XVXxWy" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Maquina Maquininha De Cortar Cabelo Barbeador Eletrico Aparador De Pelos Acabamento Dragão Buda Profissional Kamufla</h5>
+      <p class="card-text">Preço: R$ 20,98</p>
+      <a href="https://mercadolivre.com/sec/17j8Sds" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_Q_NP_2X_647603-MLA84850490689_052025-E.webp" class="card-img-top" alt="Escova Secadora de Cabelos Britânia Bec07r Soft 4 Em 1 1300w Cabo Giratório Rosa">
+    <img src="https://http2.mlstatic.com/D_Q_NP_2X_602979-MLB82530156987_022025-AB-gloss-labial-liphoney-franciny-ehlke-brilho-irresistivel.webp" class="card-img-top" alt="Gloss Labial Liphoney Franciny Ehlke Brilho Irresistível">
     <div class="card-body">
-      <h5 class="card-title">Escova Secadora de Cabelos Britânia Bec07r Soft 4 Em 1 1300w Cabo Giratório Rosa</h5>
-      <p class="card-text">Preço: R$ 121,48</p>
-      <a href="https://mercadolivre.com/sec/2dRqozF" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Gloss Labial Liphoney Franciny Ehlke Brilho Irresistível</h5>
+      <p class="card-text">Preço: R$ 77,92</p>
+      <a href="https://mercadolivre.com/sec/1w8N3JK" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_994628-MLU78867835193_092024-O.webp" class="card-img-top" alt="Loção hidratante Com Ácido Hialurônico 473ml Cerave">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_791256-MLA80372840541_112024-O.webp" class="card-img-top" alt="Papel Higiênico Vip Leve 24 E Pague 22 Personal">
     <div class="card-body">
-      <h5 class="card-title">Loção hidratante Com Ácido Hialurônico 473ml Cerave</h5>
-      <p class="card-text">Preço: R$ 89,90</p>
-      <a href="https://mercadolivre.com/sec/2U7hLso" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Papel Higiênico Vip Leve 24 E Pague 22 Personal</h5>
+      <p class="card-text">Preço: R$ 32,99</p>
+      <a href="https://mercadolivre.com/sec/1bXfTNr" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_638067-MLU73208529553_122023-O.webp" class="card-img-top" alt="Natura Homem Verum Deo Parfum 100 ml">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_896524-MLB71628162724_092023-O-kit-de-pinceis-real-techniques-travel-fantasy-mini-brush.webp" class="card-img-top" alt="Kit De Pincéis Real Techniques Travel Fantasy Mini Brush">
     <div class="card-body">
-      <h5 class="card-title">Natura Homem Verum Deo Parfum 100 ml</h5>
-      <p class="card-text">Preço: R$ 115,94</p>
-      <a href="https://mercadolivre.com/sec/1TPCvet" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Kit De Pincéis Real Techniques Travel Fantasy Mini Brush</h5>
+      <p class="card-text">Preço: R$ 82,68</p>
+      <a href="https://mercadolivre.com/sec/1hAGoUu" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_729128-MLA84535364148_052025-O.webp" class="card-img-top" alt="Night Caviar Paris Elysees Edt - Perfume Masculino 100ml">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_749924-MLU77149018915_062024-O.webp" class="card-img-top" alt="Papel Higiênico Familiar Folha Dupla 24 Rolos">
     <div class="card-body">
-      <h5 class="card-title">Night Caviar Paris Elysees Edt - Perfume Masculino 100ml</h5>
-      <p class="card-text">Preço: R$ 78,90</p>
-      <a href="https://mercadolivre.com/sec/1XiV8CK" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Papel Higiênico Familiar Folha Dupla 24 Rolos</h5>
+      <p class="card-text">Preço: R$ 29,63</p>
+      <a href="https://mercadolivre.com/sec/1YNYNfS" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
 
 <div class="col-md-4">
   <div class="card shadow-sm">
-    <img src="https://http2.mlstatic.com/D_NQ_NP_673644-CBT83457912055_042025-O-3-em-1-basto-de-blush-heart-cremoso-heci-beauty-7g.webp" class="card-img-top" alt="3 Em 1 Bastão De Blush Heart Cremoso Heci Beauty 7g">
+    <img src="https://http2.mlstatic.com/D_NQ_NP_853220-MLU72628124656_112023-O.webp" class="card-img-top" alt="Alicate Cutícula Mundial 777 Profissional Aço Inox">
     <div class="card-body">
-      <h5 class="card-title">3 Em 1 Bastão De Blush Heart Cremoso Heci Beauty 7g</h5>
-      <p class="card-text">Preço: R$ 8,79</p>
-      <a href="https://mercadolivre.com/sec/1LWoUu2" target="_blank" class="btn btn-primary">Comprar Agora</a>
+      <h5 class="card-title">Alicate Cutícula Mundial 777 Profissional Aço Inox</h5>
+      <p class="card-text">Preço: R$ 29,35</p>
+      <a href="https://mercadolivre.com/sec/1iRuX6h" target="_blank" class="btn btn-primary">Comprar Agora</a>
     </div>
   </div>
 </div>
