Atualização da página do departamento beleza

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="departamento-card h-100">
           <h4>🧴 Beleza e Cuidado</h4>
           <p>Cosméticos, skincare, autocuidado e mais.</p>
-          <a href="pagina_cuidados_beleza.html" class="btn departamento-btn w-100">Ver ofertas</a>
+          <a href="pagina_beleza.html" class="btn departamento-btn w-100">Ver ofertas</a>
         </div>
       </div>
 
